second commit - folder

--- a/ProyectoFinalDCU/ProyectoFinalDCU.csproj
+++ b/ProyectoFinalDCU/ProyectoFinalDCU.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Buscador\" />
+    <Folder Include="Filtros\" />
+    <Folder Include="Login\" />
+  </ItemGroup>
+
 </Project>
